Updated to include honor and sanity, and some cosmetic fixes

--- a/DnD Point Buy/DnD Point Buy/Form1.resx
+++ b/DnD Point Buy/DnD Point Buy/Form1.resx
@@ -136,6 +136,6 @@ This calculator was created to allow more flexibility when using the point buy s
 
 Some statistics: When using the 4d6 system for stats, that average score is calculated to be about 30.5, and there is a 57% chance that a player will have at least 1 stat above 15.
 
-Created by Matthew Parker on January 6th, 2016</value>
+Created by Matthew Parker</value>
   </data>
 </root>
